--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /pubspec.lock
 /.dart_tool/
 /.idea/
-/example_flutter_project/.dart_tool/
-/example_flutter_project/.flutter-plugins
-/example_flutter_project/.flutter-plugins-dependencies
-/example_flutter_project/pubspec.lock
+/example/.dart_tool/
+/example/.flutter-plugins
+/example/.flutter-plugins-dependencies
+/example/pubspec.lock
