--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,17 @@
 name: flutter_hardcode_localizer
 description: A Dart plugin that finds hardcoded strings in Flutter projects and provides quick-fix to move them to localization files for easy_localization.
-version: 1.0.2
+version: 1.0.3
 homepage: https://github.com/AshishPatel2611/flutter_hardcode_localizer
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
+
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  windows:
 
 dependencies:
   analyzer: ^6.2.0
@@ -14,7 +21,7 @@ dependencies:
 
 dev_dependencies:
   test: ^1.24.0
-  lints: ^3.0.0
+  lints: ^5.0.0
 
 executables:
   localize: localize
