--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_hardcode_localizer
 description: A Dart plugin that finds hardcoded strings in Flutter projects and provides quick-fix to move them to localization files for easy_localization.
-version: 1.0.3
+version: 1.0.4
 homepage: https://github.com/AshishPatel2611/flutter_hardcode_localizer
 
 environment:
@@ -18,6 +18,7 @@ dependencies:
   custom_lint_builder: ^0.6.4
   dart_style: ^2.3.4
   path: ^1.8.3
+  args: ^2.7.0
 
 dev_dependencies:
   test: ^1.24.0
